# ChatalystBI

./: .env.example  README.md  requirements.txt  streamlit_app.py
app/: main.py
app/api/: api.py
app/api/endpoints/: chat.py  images.py
app/schemas/: chat.py
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: chat.py  images.py
backend/app/schemas/: chat.py
backend/app/services/: crew_service.py
backend/app/tools/: visualization_tools.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: ChatContainer.module.css  ChatContainer.tsx  ChatInput.module.css  ChatInput.tsx  ChatMessage.module.css  ChatMessage.tsx
frontend/src/services/: api.ts
