[project]
name = "chatalyst-bi-backend"
version = "0.1.0"
description = "Backend for LLM-powered Chat to BI service"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
package-mode = false
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "crewai (>=0.105.0,<0.106.0); python_version >= '3.10' and python_version < '3.13'",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
